--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
           <label class="muted" style="display:flex; align-items:center; gap:6px;">
             <input type="checkbox" id="internalMerge" checked/> Fusionar con lista actual
           </label>
-          <button type="button" id="btnLoadInternal">📥 Cargar<\/button>
-          <button type="button" id="btnForceReload">↻ Forzar recarga<\/button>
-          <button type="button" id="btnDiag">🧪 Diagnóstico<\/button>
+          <button type="button" id="btnLoadInternal">📥 Cargar</button>
+          <button type="button" id="btnForceReload">↻ Forzar recarga</button>
+          <button type="button" id="btnDiag">🧪 Diagnóstico</button>
           <span class="muted" id="internalStatus">—<\/span>
         </div>
 
